--- a/style.css
+++ b/style.css
@@ -55,6 +55,13 @@ html, body, footer, footer a {
   width: 180px;
 }
 
+.divBorder {
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 6px;
+  background: rgba(255, 255, 255, 0.15);
+  
+}
+
 /* three icons on front page,  */
 .icons {
   width: 50%;
