--- a/style.css
+++ b/style.css
@@ -236,3 +236,18 @@ img.mr-2 {
 
 
 
+#ele {
+  position: absolute;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+#ele2 {
+  width: 650px;
+  height: 500px;
+}
+
+
+
+
