--- a/style.css
+++ b/style.css
@@ -237,17 +237,17 @@ img.mr-2 {
 
 
 #ele {
-  position: absolute;
-  left: 100%;
-  width: 100%;
-  height: 100%;
-}
-
-#ele2 {
-  width: 650px;
+  position: relative;
+  left: 150%;
+  top: 800px;
+  width: 500px;
   height: 500px;
+  z-index: 1;
 }
 
+#t {
+  height: 0%;
+}
 
 
 
