--- a/style.css
+++ b/style.css
@@ -248,6 +248,19 @@ img.mr-2 {
   height: 500px;
 }
 
+#A{
+  display: none;
+  position:absolute;
+  z-index: 1;
+	left:-5%; /* Set initial position for each image off-screen left -- adjust according to image width */
+	animation:mymove 8s infinite;	/* total animation time for each image is 8 seconds, loops forever */
+	animation-direction:normal;	
+	animation-delay:0s;
+	-webkit-animation-delay: 0s;
+}
 
-
-
+@keyframes mymove
+	{
+	from {left:-5%;}	/*off-screen left (adjust for image width)*/
+	to {left:100%;}		/*off-screen right*/
+	}
