added grey background to mission statement content

--- a/style.css
+++ b/style.css
@@ -175,7 +175,6 @@ img.mr-2 {
   border: 1px solid #8c8c8c;
 }
 
-
 /* ID Selectors */
 
 /* content of mygroups page */
@@ -231,6 +230,11 @@ img.mr-2 {
   .textcenter{
     text-align: center;
   }
+
+  .greyBG {
+    background-color: #e9ecef;
+  }
+
 }
 
 
