changed width of submit button

--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ html, body, footer, footer a {
 }
 
 .modal-content {
-  background: #1A75C1;
-  color: #FFF;
+  background: #FFF;
+  color: #1A75C1;
   
 }
 .modaluserpw {
