--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ html, body, footer, footer a {
   width: 100%;
   font-family: 'Poppins', sans-serif;
 }
-
+button {
+  border-radius: 30px !important;
+}
 /* Class Selectors */
 
 /* aboutgroups (events) */
