--- a/style.css
+++ b/style.css
@@ -189,7 +189,9 @@ button {
   color: #F6F6F6;
 }
 
-
+#BudgetErrorID {
+  color: red;
+}
 /* copyright in footer */
 #copyright {
   background-color: #232F3C;
