minor bug fixes

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ button {
   
 }
 
+
 .modaluserpw {
   width: 100%;
 }
@@ -218,7 +219,9 @@ img.mr-2 {
   font-size: 12pt;
   color: #F6F6F6;
 }
-
+#groupBudgeth5 {
+  color: red;
+}
 /* title of main div containers */
 #main {
   font-size: 20pt;
