Moved some JS to mementoScripts, changed from onClick() to jquery, added some error text and logic, bound enter to button press for forms, and added PHP to update Events modal with appropriate events when budget is changed when the group is full, all budgets entered but event not set.

--- a/style.css
+++ b/style.css
@@ -288,9 +288,11 @@ img.mr-2 {
   color: #1A75C1;
   font-size: 14pt;
 }
-#usernameError, #passwordError, #passwordMatch, #emailError, #registrationError, #loginErrorID2, #groupnameError, #groupPwError, #groupPwMatch {
+#usernameError, #passwordError, #passwordMatch, #emailError, #registrationError, #loginErrorID2, #groupnameError, #groupPwError, #groupPwMatch, #groupSizeError, #descriptionError {
   color: red;
   font-size: 18px;
+  margin: auto;
+  padding-top: 5px;
 }
 
 #registrationError {
